--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,3 @@
-<%# add navigation links to this file %>
+<li><%= link_to 'About', about_path %></li>
+<li><%= link_to 'Help', help_path %></li>
+<li><%= link_to "Sign in", '#' %></li>
