--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="center hero-unit">
 	<h1>Welcome to SVBLET</h1>
-	<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
