--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <main role="main">
        <%= render 'layouts/messages' %>
        <%= yield %>
+       <%= debug(params) if Rails.env.development? %>
     </main>
   </body>
 </html>
