--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Sign Up') %>
 <h1>Sign Up</h1>
 <div class="row">
-	<div class="span6 offset3">
+	<div class="col-md-4 col-md-offset-4">
 		<%= form_for(@user) do |f| %>
 			<%= render 'shared/error_messages' %>
 			<%= f.label :name %>
@@ -10,7 +10,7 @@
 			<%= f.text_field :email %>
 			<%= f.label :password %>
 			<%= f.password_field :password %>
-			<%= f.label :password_confirmation, "Confirmation" %>
+			<%= f.label :password_confirmation, "Confirm Password" %>
 			<%= f.password_field :password_confirmation %>
 			<%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
 		<% end %>
