--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="col-md-4 col-md-offset-4">
 		<%= form_for(@user) do |f| %>
-			<%= render 'shared/error_messages' %>
+			<%= render 'shared/user_error_messages' %>
 			<%= f.label :name %>
 			<%= f.text_field :name %>
 			<%= f.label :email %>
