Allow users to view all listings

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,4 +2,6 @@
 Location: <%= @place.location %>
 Description: <%= @place.description %>
 Price: <%= @place.price %>
+<%= link_to "View listings", user_places_path, class: "btn btn-large" %>
+
 
