--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,14 +8,5 @@
     <th>Details</th>
   </tr>
 
-  <% @places.each do |place| %>
-    <tr>
-      <td><%= place.title %></td>
-      <td><%= place.description %></td>
-      <td><%= place.location %></td>
-      <td><%= place.price %></td>
-      <td><%= link_to 'Show', user_place_path(@user, place) %></td>
-    </tr>
-  <% end %>
+  <%= render @places %>
 </table>
-      
