Moves places resource to not be under users resource in routing (except for the places index action). Places resource has its own independent urls from the root url

--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -3,5 +3,5 @@
 	<td><%= place.description %></td>
 	<td><%= place.location %></td>
 	<td><%= place.price %></td>
-	<td><%= link_to 'Show', user_place_path(@user, place) %></td>
+	<td><%= link_to 'Show', place_path(place) %></td>
 </tr>
