--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,4 +2,4 @@
 Location: <%= @place.location %>
 Description: <%= @place.description %>
 Price: <%= @place.price %>
-<%= link_to "View listings", user_places_path, class: "btn btn-large" %>
+<%= link_to "View listings", "#", class: "btn btn-large" %>
