--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
 <% provide(:title, @user.name) %>
 <h1><%= @user.name %></h1>
 <%= @user.name %>, <%= @user.email %>
-<%= link_to 'Create a listing', new_user_place_path(@user)%>
-
+<%= link_to 'Create a listing', new_place_path %>
