--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -2,7 +2,7 @@
 <h1>Create a listing</h1>
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <%= form_for([@user, @place]) do |f| %>
+    <%= form_for(@place) do |f| %>
       <%= render 'shared/place_error_messages' %>
 
       <%= f.label :title %>
