--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,12 +1,6 @@
 <h1>Listings</h1>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Location</th>
-    <th>Price</th>
-    <th>Details</th>
-  </tr>
-
-  <%= render @places %>
-</table>
+<div>
+	<table class="places">
+	  <%= render @places %>
+	</table>
+</div>
