Use bootstrap style forms. Start implementation of drag and drop image upload. Update `create listing` layout.

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -29,6 +29,7 @@ img {
   @extend .btn;
   @extend .btn-primary;
   @extend .btn-lg;
+  border-radius: 2px;
   }
 // apply styles to HTML elements
 // to make views framework-neutral
