--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,23 +1,32 @@
 <% provide(:title, 'Create a listing') %>
 <h1>Create a listing</h1>
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
-    <%= form_for(@place) do |f| %>
-      <%= render 'shared/place_error_messages' %>
-
-      <%= f.label :title %>
-      <%= f.text_field :title %>
-      <%= f.label :description %>
-      <%= f.text_area :description, cols: 40, rows: 8 %> 
-      <%= f.label :location %>
-      <%= f.text_field :location %>
-      <%= f.label :price %>
-      <%= f.text_field :price%>
-      <%# TODO: Allow only numbers and certain symbols like "$" in price by changing allowed format? %>
-
-      <%= f.submit "Create my listing", class: "btn btn-large btn-primary"%>
-      <%# TODO: Change to green colour? %>
-    <% end %>
+  <div class="col-md-6">
+    <h3 id="add-pictures-title">Add some pictures</h3>
+    <form action="/file-upload" id="image-dropzone" class="dropzone dz-clickable">
+      <div class="dz-default dz-message">
+        Drop files here to upload
+      </div>
+      <div class="fallback">
+        <input name="file" type="file" multiple />
+      </div>
+    </form>
   </div>
-</div>
+  <div class="col-md-6">
+    <%= bootstrap_form_for(@place, layout: :horizontal) do |f| %>
+      <%= f.alert_message "Please fix the errors below." %>
 
+      <%= f.text_field :title, label: "Title", autofocus: true %>
+      <%= f.text_area :description, cols: 40, rows: 8, label: "Description" %> 
+      <%= f.text_field :location, label: "Location" %>
+      <%= f.text_field :price, label: "Price" %>
+      <%# TODO: Allow only numbers and certain symbols like "$" in price by changing allowed format? %>
+    </div>
+
+    <div class="form-group">
+      <div class="col-md-8 col-md-offset-2">
+        <%= f.submit "Create my listing", class: "submit btn btn-success"%>
+      </div>
+    </div>
+  <% end %>
+</div>
