--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,8 +10,8 @@
       </button>
       <%= link_to 'SVBLET', root_path, class: 'navbar-brand', id: "logo" %>
     </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav pull-right">
+    <div class="collapse navbar-collapse navbar-right">
+      <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
       </ul>
     </div>
