Add proper drag and drop file upload with some basic file type check validation, progress bars, and uploading in background. Setup views for adding captions.

--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,2 +1,6 @@
-<img src="/assets/sample_image.JPG" />
+<%= image_tag @photo.image_url %>
+<%= form_for [@place, @photo], :method => :PATCH do |f| %>
+  <%= f.label :caption %>
+  <%= f.text_field :caption %>
+<% end %>
 
