--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,18 +1,8 @@
 <% provide(:title, 'Create a listing') %>
 <h1>Create a listing</h1>
 <div class="row">
-  <div id="photos">
-    <%= render @place.photos.all %>
-  </div>
   <%= bootstrap_form_for(@place) do |f| %>
-    <div class="col-md-6">
-      <h3 id="add-pictures-title">Add some pictures</h3>
-      <%= f.fields_for :photos do |p| %>
-        <%#dz-default dz-message%>
-        <%= p.file_field :image, name: "photo[image]", multiple: true %>
-      <% end %>
-    </div>
-    <div class="col-md-6">
+    <div class="col-md-offset-6 col-md-6">
       <%= f.alert_message "Please fix the errors below." %>
 
       <%= f.text_field :title, label: "Title", autofocus: true %>
