--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -5,5 +5,6 @@ Price: <%= @place.price %>
 <% for photo in @place.photos %>
   <% if photo.image_url.to_s %>
     <%= image_tag photo.image_url.to_s %>
+    <%= photo.caption %>
   <% end %>
 <% end %>
