--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -6,16 +6,22 @@
     <div class="col-md-6">
       <h3 id="add-pictures-title">Add some pictures</h3>
       <%= form_for ([@place, @photo]) do |f| %>
-        <%= f.file_field :photos, name: "photo[image]", multiple: true %>
-        <%= link_to 'Create a listing', place_path(@place)%>
+        <span class="btn btn-success fileinput-button">
+          <i class="icon-plus icon-white"></i>
+          <span>Add files...</span>
+          <%= f.file_field :photos, name: "photo[image]", multiple: true %>
+        </span>
       <% end %>
+      <%= link_to 'Create a listing', place_path(@place)%>
     </div>
   </div>
 </div>
 
 <script id="template-upload" type="text/x-tmpl">
-<div class="upload">
-{%=o.name%}
-<div class="progress"><div class="bar" style="width: 0%"></div></div>
-</div>
+  <div class="upload">
+  {%=o.name%}
+    <div class="progress">
+      <div class="bar" style="width: 0%"></div>
+    </div>
+  </div>
 </script>
