Adds new column "number of people looking for" column to the places table

--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -5,5 +5,6 @@
     <td class="image"><%= render "image", place: place %></td>
     <td class="title_description"><%= render "title_description", place: place %></td>
     <td class="location"><%= render "location", place: place %></td>
+    <td class="looking_for">Looking for <%= place.looking_for %></td>
     <td class="price"><%= render "price", place: place %></td>
 </tr>
