--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -2,13 +2,14 @@
 <h1>Create a listing</h1>
 <div class="row">
   <%= bootstrap_form_for(@place) do |f| %>
-    <div class="col-md-offset-6 col-md-6">
+    <div class="col-md-offset-3 col-md-6">
       <%= f.alert_message "Please fix the errors below." %>
 
       <%= f.text_field :title, label: "Title", autofocus: true %>
       <%= f.text_area :description, cols: 40, rows: 8, label: "Description" %> 
       <%= f.text_field :location, label: "Location" %>
-      <%= f.text_field :price, label: "Price" %>
+      <%= f.number_field :looking_for, label: "How many people are you looking for?" %>
+      <%= f.number_field :price, label: "Price" %>
       <%# TODO: Allow only numbers and certain symbols like "$" in price by changing allowed format? %>
 
       <div class="form-group">
