--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,22 +1,22 @@
 <% provide(:title, 'Edit listing') %>
 <h1>Edit listing</h1>
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
-    <%= form_for(@place) do |f| %>
-      <%= render 'shared/place_error_messages' %>
+  <%= bootstrap_form_for(@place) do |f| %>
+    <div class="col-md-offset-3 col-md-6">
+      <%= f.alert_message "Please fix the errors below." %>
 
-      <%= f.label :title %>
-      <%= f.text_field :title %>
-      <%= f.label :description %>
-      <%= f.text_area :description, cols: 40, rows: 8 %> 
-      <%= f.label :location %>
-      <%= f.text_field :location %>
-      <%= f.label :price %>
-      <%= f.text_field :price%>
+      <%= f.text_field :title, label: "Title", autofocus: true %>
+      <%= f.text_area :description, cols: 40, rows: 8, label: "Description" %> 
+      <%= f.text_field :location, label: "Location" %>
+      <%= f.number_field :looking_for, label: "How many people are you looking for?" %>
+      <%= f.number_field :price, label: "Price" %>
       <%# TODO: Allow only numbers and certain symbols like "$" in price by changing allowed format? %>
 
-      <%= f.submit "Edit my listing", class: "btn btn-large btn-primary"%>
-      <%# TODO: Change to green colour? %>
-    <% end %>
-  </div>
+      <div class="form-group">
+        <div class="col-md-8 col-md-offset-2">
+          <%= f.submit "Create my listing", class: "submit btn btn-success"%>
+        </div>
+      </div>
+    </div>
+  <% end %>
 </div>
