--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,5 @@
-<li><%= link_to 'About', about_path %></li>
-<li><%= link_to 'Help', help_path %></li>
 <% if signed_in? %>
+    <li><%= link_to "Create a Listing", new_place_path %></li>
 	<li><%= link_to "Profile", current_user %></li>
 	<li><%= link_to "Sign out", signout_path, method: "delete" %></li>
 <% else %>
