--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,16 +10,17 @@
 /* header */
 
 #logo {
+  font-family: "Helvetica Neue";
 	float: left;
 	margin-right: 10px;
 	font-size: 1.7em;
-	color: white;
+	color: gray;
 	text-transform: uppercase;
 	letter-spacing: -1px;
 	font-weight: bold;
 	line-height: 1;
 	&:hover {
-		color: white;
+		color: black;
 		text-decoration: none;
 	}
 }
@@ -45,11 +46,15 @@
 }
 
 /* body */
-
-#main {
-	padding-top: 28px;
-}
-
 .spinner {
 	display: none;
+}
+
+#submit-icon {
+    color: white;
+    background-color: #27AE60;
+    border-radius: 1px;
+    height: 34px;
+    padding: 8px 8px 11px 8px;
+    margin-left: 0px;
 }
