--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,38 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#hero-with-bg {
+  // Background from: http://bosguydotcom.files.wordpress.com/2012/05/golden-gate-night.jpg
+  // Blur added with pixlr's gaussian blur set to max
+  // Hopefully we can legally use this
+  background: transparent url(/assets/golden-gate-night-blur.jpg) repeat center top;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0px;
+}
+
+#home-intro {
+  color: white;
+  font-size: 4.0em;
+  line-height: 1.5;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
+}
+
+.home-container {
+  max-width: 1170px;
+  margin: 0 auto;
+  margin-top: 220px;
+  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.6);
+  label {
+    color: white;
+    font-weight: normal;
+  }
+}
+
+.home-create-info {
+  color: white;
+}
