--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,6 +10,12 @@
       </button>
       <%= link_to 'SVBLET', root_path, class: 'navbar-brand', id: "logo" %>
     </div>
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" id="searchbar" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default" id="submit-icon"><span class="glyphicon glyphicon-search"></span></button>
+    </form>
     <div class="collapse navbar-collapse navbar-right">
       <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
