--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Svblet<%= content_for?(:title) ? " : " + yield(:title) : "" %></title>
+    <title>SVBLET<%= content_for?(:title) ? " : " + yield(:title) : "" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Svblet" %>">
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
