--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,24 @@
-<div class="text-center hero-unit">
-	<h1>Welcome to SVBLET</h1>
-	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+<div class="row" id="hero-with-bg">
+  <div class="home-container">
+    <div class="col-md-6">
+      <h1 id="home-intro">Create a free<br>listing today</h1>
+      <p class="home-create-info text-center">Create an account or Connect with Facebook.</p>
+    </div>
+    <div class="col-md-6">
+      <%= form_for(@user) do |f| %>
+        <%= render 'shared/user_error_messages' %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+        <%= f.label :password_confirmation, "Confirm Password" %>
+        <%= f.password_field :password_confirmation %>
+        <div class="col-md-6 col-md-offset-3">
+          <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
