--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,7 +10,7 @@
 /* header */
 
 #logo {
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", sans-serif;
 	float: left;
 	margin-right: 10px;
 	font-size: 1.7em;
@@ -23,6 +23,12 @@
 		color: black;
 		text-decoration: none;
 	}
+}
+
+.navbar-nav a {
+    &:hover {
+        color: #333333 !important;
+    }
 }
 
 .debug_dump {
