--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,14 @@
 <% provide(:title, 'Sign Up') %>
 <h1>Sign Up</h1>
 <div class="row">
-	<div class="col-md-4 col-md-offset-4">
-		<%= form_for(@user) do |f| %>
-			<%= render 'shared/user_error_messages' %>
-			<%= f.label :name %>
-			<%= f.text_field :name %>
-			<%= f.label :email %>
-			<%= f.text_field :email %>
-			<%= f.label :password %>
-			<%= f.password_field :password %>
-			<%= f.label :password_confirmation, "Confirm Password" %>
-			<%= f.password_field :password_confirmation %>
-			<%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
-		<% end %>
-	</div>
+    <div class="col-md-4 col-md-offset-4">
+        <%= bootstrap_form_for(@user) do |f| %>
+            <%= f.alert_message "Please fix the errors below." %>
+            <%= f.text_field :name %>
+            <%= f.text_field :email %>
+            <%= f.password_field :password %>
+            <%= f.password_field :password_confirmation %>
+            <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+        <% end %>
+    </div>
 </div>
