Integrates Google Places autocomplete API to place creation. Addresses are now based on data returned from the API.
Adds foundation for page specific Javascript. Overhauls the place
creation form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,10 @@
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Svblet" %>">
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false" %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+  <body class="<%= controller_name %> <%= action_name %>">
     <header>
       <%= render 'layouts/navigation' %>
     </header>
