--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="places-list-element">
     <ul>
         <% if @show_edit_button %>
             <li class="edit"><%= render "places/edit_listing", place: place %></li>
