--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
         <% if @user.places.count == 0 %>
             <h3>No Listings</h3>
         <% end %>
-        <ul class="places">
+        <ul class="places-list">
             <%= render @user.places %>
         </ul>
     </div>
