--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -14,30 +14,84 @@ $drop-area-height: 350px;
     border-radius: 8px;
 }
 
-.places {
+.places-list {
     /*centering horizontally*/
     margin: 0 auto;
     list-style-type: none;
     padding: 0;
 }
 
-.places > li {
+.places-list-element {
     @include module_defaults();
     margin-bottom: 10px;
 }
 
-.places ul {
+.places-list-element > ul {
     list-style-type: none;
     padding: 0; 
     margin: 0;
     text-align: center;
 }
 
-.places ul > li {
+.places-list-element > ul > li {
     display: inline-block;
     padding: 15px 1%;
     vertical-align: top;
     text-align: left;
+}
+
+#price-input-field-parent {
+    display: inline-block;
+    width: 50%;
+    margin-bottom: 0px !important;
+}
+
+#price-input-field-parent input {
+    display: inline-block;
+    width: 60%;
+    margin-left: 8px;    
+}
+
+#price-input-field-parent .form-group {
+    display: inline-block;
+    margin-bottom: 0px !important;
+}
+
+#price-input-field-parent .field_with_errors {
+    display: inline-block;
+}
+
+#price-label {
+    margin-right: 20px;
+    display: inline-block;
+}
+
+#address-inputs label {
+    display: block;
+}
+
+#address-inputs input {
+    display: inline-block;
+}
+
+#address-inputs #street_number {
+    float: left;
+    width: 18%;
+}
+
+#address-inputs #route {
+    float: right;
+    width: 78%;
+}
+
+#address-inputs #locality {
+    float: left;
+    width: 78%;
+}
+
+#address-inputs #administrative_area_level_1 {
+    float: right;
+    width: 18%;
 }
 
 /*Aim is to add up to 100%: horizontal padding for each li element is 2%
@@ -90,26 +144,6 @@ Did not account for edit button, but apparently there's still lots of space*/
 
 #add-pictures-title {
     margin-bottom: 20px;
-}
-
-#price-input-field-parent {
-    display: inline-block;
-    width: 50%;
-}
-
-#price-input-field-parent input {
-    display: inline-block;
-    width: 60%;
-    margin-left: 8px;    
-}
-
-#price-input-field-parent .form-group {
-    display: inline-block;
-}
-
-#price-label {
-    margin-right: 20px;
-    display: inline-block;
 }
 
 .dropzone {
