--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -40,25 +40,22 @@ $drop-area-height: 350px;
     text-align: left;
 }
 
+#place_looking_for {
+    width: 14%;
+}
+
 #price-input-field-parent {
-    display: inline-block;
-    width: 50%;
-    margin-bottom: 0px !important;
-}
-
-#price-input-field-parent input {
-    display: inline-block;
-    width: 60%;
-    margin-left: 8px;    
-}
-
-#price-input-field-parent .form-group {
-    display: inline-block;
     margin-bottom: 0px !important;
 }
 
 #price-input-field-parent .field_with_errors {
+    display: inline;
+}
+
+#place_price {
     display: inline-block;
+    width: 30%;
+    margin-left: 8px;
 }
 
 #price-label {
@@ -92,6 +89,13 @@ $drop-area-height: 350px;
 #address-inputs #administrative_area_level_1 {
     float: right;
     width: 18%;
+}
+
+.characters_remaining_container {
+    margin-top: -10px;
+    text-align: right;
+    font-size: 12px;
+    color: grey;
 }
 
 /*Aim is to add up to 100%: horizontal padding for each li element is 2%
