--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,12 +25,6 @@
 	}
 }
 
-.navbar-nav a {
-    &:hover {
-        color: #333333 !important;
-    }
-}
-
 .debug_dump {
 	clear: both;
 	float: left;
@@ -46,7 +40,8 @@
 		margin: 0 0 18px 0;
 	}
 }
-.field with errors {
+
+.field_with_errors {
 	@extend .control-group;
 	@extend .error;
 }
