--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -10,14 +10,15 @@
       </button>
       <%= link_to 'SVBLET', root_path, class: 'navbar-brand', id: "logo" %>
     </div>
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" id="searchbar" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default" id="submit-icon"><span class="glyphicon glyphicon-search"></span></button>
-    </form>
-    <div class="collapse navbar-collapse navbar-right">
-      <ul class="nav navbar-nav">
+
+    <div class="collapse navbar-collapse">
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" id="searchbar" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default" id="submit-icon"><span class="glyphicon glyphicon-search"></span></button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
         <%= render 'layouts/navigation_links' %>
       </ul>
     </div>
