Huge UI overhaul
- Changes how listings are displayed. Now it uses bootstrap row
divs/column divs instead of ul/li elements so that it's cleaner and more
responsive
- Cleans up some unnecessary styling in the
framework_and_overrides.css.scss file
- Moves the home page background image to be shown as background image
of the body element instead of the container div

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -47,10 +47,6 @@ input#searchbar.form-control {
 // to make views framework-neutral
 #main {
   @extend .container;
-  width: 100%;
-  padding-left: 0px;
-  padding-right: 0px;
-  background-color: #fafafa;
 }
 
 section {
@@ -59,9 +55,7 @@ section {
 }
 
 .row {
-  width: 1170px;
   margin: 0 auto;
-  margin-top: 50px;
 }
 
 /* mixins, variables, etc. */
@@ -77,7 +71,7 @@ $grayMediumLight: #eaeaea;
 /* universal */
 
 html {
-  overflow-y: scroll;
+  // overflow-y: scroll;
 }
 
 body {
