--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Listings</h1>
-<div class="row">
-	<ul class="places-list">
-	  <%= render @places %>
-	</ul>
+
+<div class="container" id="listings-parent">
+    <%= render @places %>
 </div>
