--- a/app/views/places/_place.html.erb
+++ b/app/views/places/_place.html.erb
@@ -1,12 +1,18 @@
-<li class="places-list-element">
-    <ul>
-        <% if @show_edit_button %>
-            <li class="edit"><%= render "places/edit_listing", place: place %></li>
-        <% end %>
-        <li class="image"><%= render "places/image", place: place %></li>
-        <li class="title_description"><%= render "places/title_description", place: place %></li>
-        <li class="location"><%= render "places/location", place: place %></li>
-        <li class="looking_for">Looking for <%= place.looking_for %></li>
-        <li class="price"><%= render "places/price", place: place %></li>
-    </ul>
-</li>
+<div class="row">
+<!--     TODO add borders to the right of columns only when columns are not stacked. If stacked, borders are at bottom of columns -->
+    <div class="col-md-2 image">
+        <%= render "places/image", place: place %>
+    </div>
+    <div class="col-md-7 title_description">
+        <%= render "places/title_description", place: place %>
+    </div>
+    <div class="col-md-1">
+        <%= render "places/location", place: place %>
+    </div>
+    <div class="col-md-1">
+        Looking for <%= place.looking_for %>
+    </div>
+    <div class="col-md-1 price">
+        <%= render "places/price", place: place %>
+    </div>
+</div>
