--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="row" id="hero-with-bg">
+<div class="row">
   <div class="home-container">
     <div class="col-md-6">
       <h1 id="home-intro">Create a free<br>listing today</h1>
