--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -2,9 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import url(http://fonts.googleapis.com/css?family=Bitter);
+
 $progress-green: #5cb85c;
 $success-mark-color: #5cb85c;
 $error-mark-color: #ec686e;
+$light-gray: #f8f8f8;
 
 $drop-area-border-size: 3px;
 $drop-area-height: 350px;
@@ -12,6 +15,51 @@ $drop-area-height: 350px;
 @mixin module_defaults() {
     border: solid #A1A1A1 1px;
     border-radius: 8px;
+}
+
+// Start show.html.erb styles
+
+#place-title {
+  font-family: Bitter, Arial, serif;
+  font-size: 3.5em;
+  margin-bottom: 5px;
+  text-align: left;
+  float: left;
+}
+
+#place-price {
+  font-family: Bitter, Arial, serif;
+  font-size: 2.5em;
+  font-weight: bold;
+  text-align: right;
+  vertical-align: text-bottom;
+}
+
+#place-header-location {
+  margin-bottom: 0px;
+  font-weight: 500;
+}
+
+#place-description {
+}
+
+#place-info-box {
+  border: 1px solid #dbdbdb;
+  border-radius: 2px;
+  background-color: $light-gray;
+  padding: 15px;
+}
+
+#main-place-info-container {
+  
+}
+
+// End show.html.erb styles
+
+.clear-both {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  clear: both;
 }
 
 #place_looking_for {
@@ -118,186 +166,3 @@ $drop-area-height: 350px;
 #add-pictures-title {
     margin-bottom: 20px;
 }
-
-.dropzone {
-    border: $drop-area-border-size dashed #ddd;
-    width: 80%;
-    height: $drop-area-height;
-}
-
-.dropzone.hover {
-    border: $drop-area-border-size dashed #00ee00;
-}
-
-.dz-message {
-    line-height: $drop-area-height;
-    text-align: center;
-    font-size: 200%;
-    color: grey;
-    font-weight: 300; // NOTE: a thicker 500 also looks good
-}
-
-.dropzone img {
-    display: block;
-    margin: 10px auto;
-}
-
-// Dropzone styles
-
-/* The MIT License */
-.dropzone,
-.dropzone *,
-.dropzone-previews,
-.dropzone-previews * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.dropzone {
-    position: relative;
-    border: 1px solid rgba(0,0,0,0.08);
-    background: rgba(0,0,0,0.02);
-    padding: 1em;
-}
-.dropzone.dz-clickable {
-    cursor: pointer;
-}
-.dropzone.dz-clickable .dz-message,
-.dropzone.dz-clickable .dz-message span {
-    cursor: pointer;
-}
-.dropzone.dz-clickable * {
-    cursor: default;
-}
-.dropzone .dz-message {
-    opacity: 1;
-    -ms-filter: none;
-    filter: none;
-}
-.dropzone.dz-drag-hover {
-    border-color: rgba(0,0,0,0.15);
-    background: rgba(0,0,0,0.04);
-}
-.dropzone.dz-started .dz-message {
-    display: none;
-}
-.dropzone .dz-preview,
-.dropzone-previews .dz-preview {
-    background: rgba(255,255,255,0.8);
-    position: relative;
-    display: inline-block;
-    margin: 17px;
-    vertical-align: top;
-    border: 1px solid #cccccc;
-    padding: 6px;
-}
-.dropzone .dz-preview.dz-file-preview [data-dz-thumbnail],
-.dropzone-previews .dz-preview.dz-file-preview [data-dz-thumbnail] {
-    display: none;
-}
-.dropzone .dz-preview .dz-details,
-.dropzone-previews .dz-preview .dz-details {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    /*background: #ebebeb;*/
-    padding: 5px;
-    margin-bottom: 22px;
-}
-.dropzone .dz-preview .dz-details .dz-filename,
-.dropzone-previews .dz-preview .dz-details .dz-filename {
-    display: none; // NOTE: Put this in, in some other way
-    overflow: hidden;
-    height: 100%;
-}
-.dropzone .dz-preview .dz-details img,
-.dropzone-previews .dz-preview .dz-details img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100px;
-    height: 100px;
-}
-.dropzone .dz-preview .dz-details .dz-size,
-.dropzone-previews .dz-preview .dz-details .dz-size {
-    display: none;
-    position: absolute;
-    bottom: -28px;
-    left: 3px;
-    height: 28px;
-    line-height: 28px;
-}
-.dropzone .dz-preview.dz-error .dz-error-mark,
-.dropzone-previews .dz-preview.dz-error .dz-error-mark {
-    display: block;
-}
-.dropzone .dz-preview.dz-success .dz-success-mark,
-.dropzone-previews .dz-preview.dz-success .dz-success-mark {
-    display: block;
-}
-.dropzone .dz-preview:hover .dz-details img,
-.dropzone-previews .dz-preview:hover .dz-details img {
-    display: none;
-}
-.dropzone .dz-preview .dz-success-mark,
-.dropzone-previews .dz-preview .dz-success-mark,
-.dropzone .dz-preview .dz-error-mark,
-.dropzone-previews .dz-preview .dz-error-mark {
-    display: none;
-    position: absolute;
-    width: 35px;
-    height: 35px;
-    font-size: 30px;
-    text-align: center;
-    right: -10px;
-    top: -37px;
-}
-.dropzone .dz-preview .dz-success-mark,
-.dropzone-previews .dz-preview .dz-success-mark {
-    color: $success-mark-color;
-}
-.dropzone .dz-preview .dz-error-mark,
-.dropzone-previews .dz-preview .dz-error-mark {
-    color: $error-mark-color;
-}
-.dropzone .dz-preview .dz-progress,
-.dropzone-previews .dz-preview .dz-progress {
-    position: absolute;
-    left: 6px;
-    right: 6px;
-    height: 2px;
-    background: $progress-green;
-    display: none;
-}
-.dropzone .dz-preview .dz-progress .dz-upload,
-.dropzone-previews .dz-preview .dz-progress .dz-upload {
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 0%;
-    background-color: #8cc657;
-}
-.dropzone .dz-preview.dz-processing .dz-progress,
-.dropzone-previews .dz-preview.dz-processing .dz-progress {
-    display: block;
-}
-.dropzone .dz-preview .dz-error-message,
-.dropzone-previews .dz-preview .dz-error-message {
-    display: none;
-    position: absolute;
-    top: -5px;
-    left: -20px;
-    background: rgba(245,245,245,0.8);
-    padding: 8px 10px;
-    color: #800;
-    min-width: 140px;
-    max-width: 500px;
-    z-index: 500;
-}
-.dropzone .dz-preview:hover.dz-error .dz-error-message,
-.dropzone-previews .dz-preview:hover.dz-error .dz-error-message {
-    display: block;
-}
-
